adding some simple error stuff

--- a/junit_viewer.css
+++ b/junit_viewer.css
@@ -61,3 +61,10 @@ body {
     text-align: center;
     padding: 5px;
 }
+
+.error {
+    background-color: lightcoral;
+    padding: 20px;
+    margin: 31px;
+    font-size: 24px;
+}
