- Added SKIP step type in UI  - Added semicolons

--- a/junit_viewer.css
+++ b/junit_viewer.css
@@ -36,6 +36,10 @@ body {
     background: lightcoral;
 }
 
+.test--skip {
+    background: lightgoldenrodyellow;
+}
+
 .test__time {
     position: absolute;
     right: 0;
