- Added flag support for future purposes

--- a/junit_viewer.css
+++ b/junit_viewer.css
@@ -33,6 +33,20 @@ body {
     float: left;
 }
 
+.suite__name .flag {
+    display: inline-block;
+    padding: 0 10px;
+    background: rgba(255,255,255,0.5);
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+.suite__name .flag.content { color: red; }
+.suite__name .flag.missing { color: darkblue; }
+.suite__name .flag.engine { color: red; background: yellow; }
+.suite__name .flag.bug { color: red; }
+.suite__name .flag.ta { color: green; }
+
 .suite__data {
     float: right;
     margin-left: 5px;
