--- a/junit_viewer.css
+++ b/junit_viewer.css
@@ -104,7 +104,7 @@ body {
 .suite__summary > span {
     display: inline-block;
     padding: 5px 10px;
-    margin: 0 10px 0 0;
+    margin: 3px;
     background: lightgrey;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
