adding more to templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,11 @@
 
 <head>
     <title>{{title}}</title>
+    <style type="text/css"></style>
 </head>
 
 <body>
-    <br />
     <h1 id="title">{{title}}</h1>
-    <br />
     <div>
         <div id="options">
             <button>Filter Passing</button>
@@ -21,6 +20,7 @@
         </div>
         <div id="suites">{{{suites}}}</div>
     </div>
+    <script type="text/javascript"></script>
 </body>
 
 </html>
