--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,4 +1,4 @@
 <div class="suite">
-    <button class="suite_name">{{{name}}}</button>
+    <button class="suite_name suite--{{type}}">{{{name}}}</button>
     <div class="tests">{{{tests}}}</div>
 </div>
