--- a/templates/test.html
+++ b/templates/test.html
@@ -1,5 +1,5 @@
 <div class="test">
-    <button class={{type}}>
+    <button class="test_name test--{{type}}">
         <span class="test_name">{{name}}</span>
         <span class="test_time">{{time}}</span>
     </button>
