can cerate a not very pretty html page

--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,4 +1,6 @@
 <div class="suite">
     <button class="suite_name suite--{{type}}">{{{name}}}</button>
+    {{{properties}}}
+    
     <div class="tests">{{{tests}}}</div>
 </div>
