--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,24 @@
 
 <head>
     <title>{{title}}</title>
-    <style type="text/css"></style>
+    <style type="text/css">
+    .suite {
+        border: solid 1px;
+    }
+    
+    .suite_name {
+        width: 100%;
+    }
+    
+    .test {
+        border: solid 1px;
+        margin: 5px;
+    }
+    
+    .test_name {
+        width: 100%;
+    }
+    </style>
 </head>
 
 <body>
