starting on search box and added id to all suites and tests for quick filtering

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="suites">{{{suites}}}</div>
     </div>
-    <script type="text/javascript"></script>
+    <script type="text/javascript">{{{javascript}}}</script>
 </body>
 
 </html>
