--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,4 +1,4 @@
-<div class="suite">
+<div class="suite" id="{{id}}">
     <button class="suite_name suite--{{type}}">{{{name}}}</button>
     {{{properties}}}
     
