--- a/templates/test.html
+++ b/templates/test.html
@@ -1,4 +1,4 @@
-<div class="test">
+<div class="test" id="{{id}}">
     <button class="test_name test--{{type}}">
         <span class="test_name">{{name}}</span>
         <span class="test_time">{{time}}</span>
