--- a/templates/property.html
+++ b/templates/property.html
@@ -1,4 +1,4 @@
-<li span="property">
-    <span class="property__key">{{key}}</span>
-    <span class="property__value">{{value}}</span>
-</li>
+<tr>
+    <td><b>{{key}}</b></td>
+    <td>{{value}}</td>
+</tr>
