--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,6 +1,7 @@
 <div class="suite" id="{{id}}">
-    <button class="suite_name suite--{{type}}">{{{name}}}</button>
-    {{{properties}}}
-    
-    <div class="tests">{{{tests}}}</div>
+    <button class="suite_name suite--{{type}} u-full-width">{{{name}}}</button>
+    <div class="suite__contents">
+        {{{properties}}}
+        <div class="tests">{{{tests}}}</div>
+    </div>
 </div>
