--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,121 @@
 <head>
     <title>{{title}}</title>
     {{{skeleton}}}
+    <style type="text/css">
+    h1 {
+        text-align: center;
+    }
+    
+    .suite--failure {
+        color: #FFF;
+        background-color: #FF1717;
+        border-color: #FF1717;
+    }
+    
+    .suite--failure:focus,
+    .suite--failure:hover {
+        color: #FFF;
+        background-color: #ED1515;
+        border-color: #ED1515;
+    }
+    
+    .suite--passed {
+        color: #FFF;
+        background-color: #0CAB37;
+        border-color: #0CAB37;
+    }
+    
+    .suite--passed:focus,
+    .suite--passed:hover {
+        color: #FFF;
+        background-color: #0B9C32;
+        border-color: #0B9C32;
+    }
+    
+    .test--failure,
+    .test--error {
+        color: #FFF;
+        background-color: #E50000;
+        border-color: #E50000;
+    }
+    
+    .test--failure:focus,
+    .test--error:focus,
+    .test--failure:hover,
+    .test--error:hover {
+        color: #FFF;
+        background-color: #CC0000;
+        border-color: #CC0000;
+    }
+    
+    .test--passed {
+        color: #FFF;
+        background-color: #0DBD3D;
+        border-color: #0DBD3D;
+    }
+    
+    .test--passed:focus,
+    .test--passed:hover {
+        color: #FFF;
+        background-color: #0BA635;
+        border-color: #0BA635;
+    }
+    
+    .test--skipped {
+        color: #FFF;
+        background-color: #C3D6E3;
+        border-color: #C3D6E3;
+    }
+    
+    .test--skipped:focus,
+    .test--skipped:hover {
+        color: #FFF;
+        background-color: #BDCFDB;
+        border-color: #BDCFDB;
+    }
+    
+    .properties__title {
+        color: #FFF;
+        background-color: #B6B4BA;
+        border-color: #B6B4BA;
+    }
+    
+    .properties__title:focus,
+    .properties__title:hover {
+        color: #FFF;
+        background-color: #A7A6AB;
+        border-color: #A7A6AB;
+    }
+    
+    .properties__list,
+    .test_message {
+        width: 90%;
+        margin-left: 5%;
+    }
+    
+    .suite_name {
+        margin: 0;
+    }
+    
+    .suite__contents {
+        margin: -4px 0 5px 0;
+        border-radius: 0 4px;
+        border: 1px solid #bbb;
+        padding: 5px;
+    }
+    </style>
 </head>
 
 <body>
-    <h1 id="title">{{title}}</h1>
-    <div>
-        <div id="options">
-            <form>
-            <button>Filter Passing</button>
-                <fieldset>
-                    <label>Search:</label>
-                    <input type="text" oninput="search(this.value)"></input>
-                </fieldset>
-            </form>
+    <h1 id="title" class="u-full-width">{{title}}</h1>
+    <div id="options" class="row offset-by-one ten columns">
+        <button class="u-pull-left three columns button-primary">Filter Passing</button>
+        <div class="u-pull-right seven columns">
+            <button disabled class="four columns">Search:</button>
+            <input type="text" class="eight columns" oninput="search(this.value)"></input>
         </div>
-        <div id="suites">{{{suites}}}</div>
     </div>
+    <div id="suites" class="row offset-by-one ten columns">{{{suites}}}</div>
     <script type="text/javascript">{{{javascript}}}</script>
 </body>
 
