--- a/templates/test.html
+++ b/templates/test.html
@@ -1,7 +1,7 @@
 <div class="test" id="{{id}}">
-    <button class="test_name test--{{type}}">
-        <span class="test_name">{{name}}</span>
-        <span class="test_time">{{time}}</span>
+    <button class="test_name test--{{type}} u-full-width">
+        <span class="test_name u-pull-left">{{name}}</span>
+        <span class="test_time u-pull-right">{{time}}</span>
     </button>
     {{{message}}}
 </div>
