have everything looking good

--- a/templates/index.html
+++ b/templates/index.html
@@ -105,8 +105,9 @@
         border-radius: 0 0 4px 4px;
         padding: 10px;
     }
-
-    .properties__list th, .properties__list td {
+    
+    .properties__list th,
+    .properties__list td {
         padding-left: 10px;
     }
     
@@ -114,6 +115,11 @@
     .test_name {
         margin-bottom: 0;
         border-radius: 4px 4px 0 0;
+    }
+    
+    .test--passed,
+    .test--skipped {
+        border-radius: 4px;
     }
     
     .suite_name {
