--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
         <button class="one-half column button-primary">Hide Passing Tests</button>
     </div>
     <div id="suites" class="row offset-by-one ten columns">{{{suites}}}</div>
-    <!--script type="text/javascript">{{{javascript}}}</script-->
+    <script type="text/javascript">{{{javascript}}}</script>
 </body>
 
 </html>
