clicking on suites, tests and properties contracts them

--- a/templates/properties.html
+++ b/templates/properties.html
@@ -1,5 +1,5 @@
 <div class="properties">
-    <button class="properties__title u-full-width">
+    <button class="properties__title u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
     <table class="properties__list u-full-width">
