--- a/templates/test.html
+++ b/templates/test.html
@@ -1,5 +1,5 @@
 <div class="test" id="{{id}}">
-    <button class="test_name test--{{type}} u-full-width">
+    <button class="test_name test--{{type}} u-full-width" onclick="contract(this.parentElement)">
         <span class="test_name u-pull-left">{{name}}</span>
         <span class="test_time u-pull-right">{{time}}</span>
     </button>
