can hide passing suites

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,13 +125,15 @@
     .suite_name {
         margin: 0;
         border-radius: 4px 4px 0 0;
+        margin-bottom: 5px;
     }
     
     .suite__contents {
-        margin: -4px 0 5px 0;
+        margin: -10px 0 5px 0;
         border-radius: 0 0 4px 4px;
         border: 1px solid #bbb;
         padding: 5px;
+        padding-top: 10px;
     }
     
     .search_button {
@@ -148,17 +150,17 @@
     <h1 id="title" class="u-full-width">{{title}}</h1>
     <div id="options" class="row offset-by-one ten columns">
         <div class="row">
-            <button disabled class="search_button one-third column">Search Suites:</button>
+            <button disabled class="search_button one-third column">SEARCH SUITES</button>
             <input type="text" class="search_input two-thirds column" oninput="search(this.value)"></input>
         </div>
         <div class="row">
-            <button disabled class="search_button one-third column">Search Tests:</button>
+            <button disabled class="search_button one-third column">SEARCH TESTS</button>
             <input type="text" class="search_input two-thirds column" oninput="search(this.value)"></input>
         </div>
     </div>
     <div id="options" class="row offset-by-one ten columns">
-        <button class="one-half column button-primary">Hide Passing Suites</button>
-        <button class="one-half column button-primary">Hide Passing Tests</button>
+        <button class="one-half column button-primary" onclick="hideSuites(this)">HIDE PASSGING SUITES</button>
+        <button class="one-half column button-primary" onclick="hideTests(this)">HIDE PASSING TESTS</button>
     </div>
     <div id="suites" class="row offset-by-one ten columns">{{{suites}}}</div>
     <script type="text/javascript">{{{javascript}}}</script>
