--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,5 +1,5 @@
 <div class="suite" id="{{id}}">
-    <button class="suite_name suite--{{type}} u-full-width" onclick="contract(this.parentElement)">{{{name}}}</button>
+    <button class="suite__name suite--{{type}} u-full-width" onclick="contract(this.parentElement)">{{{name}}}</button>
     <div class="suite__contents">
         {{{properties}}}
         <div class="tests">{{{tests}}}</div>
