--- a/templates/test.html
+++ b/templates/test.html
@@ -1,7 +1,7 @@
 <div class="test" id="{{id}}">
-    <button class="test_name test--{{type}} u-full-width" onclick="contract(this.parentElement)">
-        <span class="test_name u-pull-left">{{name}}</span>
-        <span class="test_time u-pull-right">{{time}}</span>
+    <button class="test__name test--{{type}} u-full-width" onclick="contract(this.parentElement)">
+        <span class="u-pull-left">{{name}}</span>
+        <span class="u-pull-right">{{time}}</span>
     </button>
     {{{message}}}
 </div>
