--- a/templates/options.html
+++ b/templates/options.html
@@ -1,16 +1,43 @@
 <div>
     <button class="button-primary u-full-width" onclick="contract(this.parentElement)">ADVANCED SEARCH</button>
-    <!-- <div class="options" style="display: none"> -->
-    <div class="options">
+    <div class="options" style="display: none">
         <div class="option">
             <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">SUITES</button>
-            <div class="options__cta">
+            <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
                     <input type="text" class="options_search__input"></input>
                 </div>
                 <div class="options__buttons">
-                    <button>SEARCH</button>
+                    <button class="one-half column button-primary">HIDE PASSING</button>
+                    <button class="one-half column button-primary">CONTRACT</button>
+                </div>
+            </div>
+        </div>
+        <div class="option">
+            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">TESTS</button>
+            <div class="options__cta row">
+                <div class="u-full-width">
+                    <button disabled class="options_search__name">SEARCH</button>
+                    <input type="text" class="options_search__input"></input>
+                </div>
+                <div class="options__buttons">
+                    <button class="one-third column button-primary">HIDE PASSING</button>
+                    <button class="one-third column button-primary">HIDE ALL</button>
+                    <button class="one-third column button-primary">CONTRACT</button>
+                </div>
+            </div>
+        </div>
+        <div class="option">
+            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">PROPERTIES</button>
+            <div class="options__cta row">
+                <div class="u-full-width">
+                    <button disabled class="options_search__name">SEARCH</button>
+                    <input type="text" class="options_search__input"></input>
+                </div>
+                <div class="options__buttons">
+                    <button class="one-half column button-primary">HIDE PROPERTIES</button>
+                    <button class="one-half column button-primary">CONTRACT</button>
                 </div>
             </div>
         </div>
