--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,19 @@
         border-radius: 0 4px 4px 0 !important;
     }
 
+    .flat {
+        border-radius: 4px 4px 0 0;
+    }
+
+    .round {
+        border-radius: 4px;
+    }
+
+    .hide--clicking,
+    .hide--searching {
+        display: none;
+    }
+
     </style>
 </head>
 
