--- a/templates/options.html
+++ b/templates/options.html
@@ -1,43 +1,43 @@
 <div>
     <button class="button-primary u-full-width" onclick="contract(this.parentElement)">ADVANCED SEARCH</button>
-    <div class="options" style="display: none">
+    <div class="options hide--clicking">
         <div class="option">
-            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">SUITES</button>
+            <button class="button-primary u-full-width option__name flat" onclick="contract(this.parentElement)">SUITES</button>
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input" oninput="search.suites(this.value)"></input>
+                    <input type="text" class="options_search__input" oninput="cta.search.suites(this.value)"></input>
                 </div>
                 <div class="options__buttons">
-                    <button class="one-half column button-primary" onclick="hide.passing.suites(this)">HIDE PASSING</button>
-                    <button class="one-half column button-primary" onclick="contract.suites(this)">CONTRACT</button>
+                    <button class="one-half column button-primary" onclick="cta.hide.passing.suites(this)">HIDE PASSING</button>
+                    <button class="one-half column button-primary" onclick="cta.contract.suites(this)">CONTRACT</button>
                 </div>
             </div>
         </div>
         <div class="option">
-            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">TESTS</button>
+            <button class="button-primary u-full-width option__name flat" onclick="contract(this.parentElement)">TESTS</button>
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input" oninput="search.tests(this.value)"></input>
+                    <input type="text" class="options_search__input" oninput="cta.search.tests(this.value)"></input>
                 </div>
                 <div class="options__buttons">
-                    <button class="one-third column button-primary" onclick="hide.passing.test(this)">HIDE PASSING</button>
-                    <button class="one-third column button-primary" onclick="hide.tests(this)">HIDE ALL</button>
-                    <button class="one-third column button-primary" onclick="contract.tests(this)">CONTRACT</button>
+                    <button class="one-third column button-primary" onclick="cta.hide.passing.tests(this)">HIDE PASSING</button>
+                    <button class="one-third column button-primary" onclick="cta.hide.tests(this)">HIDE ALL</button>
+                    <button class="one-third column button-primary" onclick="cta.contract.tests(this)">CONTRACT</button>
                 </div>
             </div>
         </div>
         <div class="option">
-            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">PROPERTIES</button>
+            <button class="button-primary u-full-width option__name flat" onclick="contract(this.parentElement)">PROPERTIES</button>
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input" oninput="search.properties(this.value)"></input>
+                    <input type="text" class="options_search__input" oninput="cta.search.properties(this.value)"></input>
                 </div>
                 <div class="options__buttons">
-                    <button class="one-half column button-primary" onclick="hide.properties(this)">HIDE PROPERTIES</button>
-                    <button class="one-half column button-primary" onclick="contract.properties(this)">CONTRACT</button>
+                    <button class="one-half column button-primary" onclick="cta.hide.properties(this)">HIDE PROPERTIES</button>
+                    <button class="one-half column button-primary" onclick="cta.contract.properties(this)">CONTRACT</button>
                 </div>
             </div>
         </div>
