moving style to seperate file

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,167 +4,7 @@
 <head>
     <title>{{title}}</title>
     {{{skeleton}}}
-    <style type="text/css">
-    h1 {
-        text-align: center;
-    }
-    
-    .suite--failure {
-        color: #FFF;
-        background-color: #FF1717;
-        border-color: #FF1717;
-    }
-    
-    .suite--failure:focus,
-    .suite--failure:hover {
-        color: #FFF;
-        background-color: #ED1515;
-        border-color: #ED1515;
-    }
-    
-    .suite--passed {
-        color: #FFF;
-        background-color: #0CAB37;
-        border-color: #0CAB37;
-    }
-    
-    .suite--passed:focus,
-    .suite--passed:hover {
-        color: #FFF;
-        background-color: #0B9C32;
-        border-color: #0B9C32;
-    }
-    
-    .test--failure,
-    .test--error {
-        color: #FFF;
-        background-color: #E50000;
-        border-color: #E50000;
-    }
-    
-    .test--failure:focus,
-    .test--error:focus,
-    .test--failure:hover,
-    .test--error:hover {
-        color: #FFF;
-        background-color: #CC0000;
-        border-color: #CC0000;
-    }
-    
-    .test--passed {
-        color: #FFF;
-        background-color: #0DBD3D;
-        border-color: #0DBD3D;
-    }
-    
-    .test--passed:focus,
-    .test--passed:hover {
-        color: #FFF;
-        background-color: #0BA635;
-        border-color: #0BA635;
-    }
-    
-    .test--skipped {
-        color: #FFF;
-        background-color: #C3D6E3;
-        border-color: #C3D6E3;
-    }
-    
-    .test--skipped:focus,
-    .test--skipped:hover {
-        color: #FFF;
-        background-color: #BDCFDB;
-        border-color: #BDCFDB;
-    }
-    
-    .properties__title {
-        color: #FFF;
-        background-color: #B6B4BA;
-        border-color: #B6B4BA;
-    }
-    
-    .properties__title:focus,
-    .properties__title:hover {
-        color: #FFF;
-        background-color: #A7A6AB;
-        border-color: #A7A6AB;
-    }
-    
-    .properties,
-    .test,
-    .option {
-        width: 96%;
-        margin-left: 2%;
-        margin-right: 2%;
-        margin-bottom: 10px;
-    }
-    
-    .properties__list,
-    .test__message,
-    .options__cta {
-        margin-top: -10px;
-        border: 1px solid #bbb;
-        border-radius: 0 0 4px 4px;
-        padding: 10px;
-    }
-    
-    .properties__list th,
-    .properties__list td {
-        padding-left: 10px;
-    }
-    
-    .properties__title,
-    .test__name {
-        margin-bottom: 0;
-        border-radius: 4px 4px 0 0;
-    }
-    
-    .test--passed,
-    .test--skipped {
-        border-radius: 4px;
-    }
-    
-    .suite__name {
-        margin: 0;
-        border-radius: 4px 4px 0 0;
-        margin-bottom: 5px;
-    }
-    
-    .suite__contents,
-    .options {
-        margin: -10px 0 5px 0;
-        border-radius: 0 0 4px 4px;
-        border: 1px solid #bbb;
-        padding: 5px;
-        padding-top: 10px;
-    }
-
-    .options_search__name {
-        width: 24%;
-        margin-right: 0;
-        border-radius: 4px 0 0 4px !important;
-    }
-
-    .options_search__input {
-        width: 74%;
-        margin-left: -5px;
-        border-radius: 0 4px 4px 0 !important;
-    }
-
-    .flat {
-        border-radius: 4px 4px 0 0;
-    }
-
-    .round {
-        border-radius: 4px;
-    }
-
-    .hide--clicking,
-    .hide--searching {
-        display: none;
-    }
-
-    </style>
+    <style type="text/css">{{style}}</style>
 </head>
 
 <body>
