all hide buttons working

--- a/templates/options.html
+++ b/templates/options.html
@@ -36,7 +36,7 @@
                     <input type="text" class="options_search__input" oninput="cta.search.properties(this.value)"></input>
                 </div>
                 <div class="options__buttons">
-                    <button class="one-half column button-primary" onclick="cta.hide.properties(this)">HIDE PROPERTIES</button>
+                    <button class="one-half column button-primary" onclick="cta.hide.properties(this)">HIDE ALL</button>
                     <button class="one-half column button-primary" onclick="cta.contract.properties(this)">CONTRACT</button>
                 </div>
             </div>
