--- a/templates/properties.html
+++ b/templates/properties.html
@@ -1,4 +1,4 @@
-<div class="properties">
+<div id={{id}} class="properties">
     <button class="properties__title u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
