--- a/templates/properties.html
+++ b/templates/properties.html
@@ -1,5 +1,5 @@
 <div id={{id}} class="properties">
-    <button class="properties__title u-full-width" onclick="contract(this.parentElement)">
+    <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
     <table class="properties__list u-full-width">
