--- a/templates/test.html
+++ b/templates/test.html
@@ -1,5 +1,5 @@
 <div class="test" id="{{id}}">
-    <button class="test__name test--{{type}} u-full-width" onclick="contract(this.parentElement)">
+    <button class="test__name test--{{type}} u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">{{name}}</span>
         <span class="u-pull-right">{{time}}</span>
     </button>
