parsing and rendering seems a bit simpler

--- a/templates/properties.html
+++ b/templates/properties.html
@@ -8,7 +8,7 @@
             <th>VALUE</th>
         </thead>
         <tbody>
-            {{{properties}}}
+            {{{rendered.properties}}}
         </tbody>
     </table>
 </div>
