--- a/templates/test.html
+++ b/templates/test.html
@@ -3,5 +3,5 @@
         <span class="u-pull-left">{{name}}</span>
         <span class="u-pull-right">{{time}}</span>
     </button>
-    {{{message}}}
+    {{{rendered.messages}}}
 </div>
