messages for skipped

--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,7 +1,7 @@
 <div class="suite" id="{{id}}">
     <button class="suite__name suite--{{type}} u-full-width" onclick="cta.contract.local.suite(this.parentElement)">{{{name}}}</button>
     <div class="suite__contents">
-        {{{rendered.properties}}}
-        <div class="tests">{{{rendered.tests}}}</div>
+        {{{rendered.suiteProperties}}}
+        <div class="suite__tests">{{{rendered.tests}}}</div>
     </div>
 </div>
