--- a/templates/properties.html
+++ b/templates/properties.html
@@ -1,4 +1,4 @@
-<div id={{id}} class="properties">
+<div id={{id}} class="properties{{single}}">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
