--- a/templates/suite_properties.html
+++ b/templates/suite_properties.html
@@ -1,1 +1,6 @@
-<div class="suite__properties">{{{rendered.properties}}}</div>
+<div class="suite__properties">
+    <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
+        <span class="u-pull-left">MULTIPLE PROPERTIES</span>
+    </button>
+    {{{rendered.properties}}}
+</div>
