--- a/templates/suite_properties.html
+++ b/templates/suite_properties.html
@@ -2,5 +2,7 @@
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
-    {{{rendered.properties}}}
+    <div class="properties__list">
+        {{{rendered.properties}}}
+    </div>
 </div>
