--- a/templates/suite_properties.html
+++ b/templates/suite_properties.html
@@ -1,4 +1,4 @@
-<div class="suite__properties">
+<div class="suite__properties" id="{{properties.id}}">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
