--- a/templates/test.html
+++ b/templates/test.html
@@ -1,7 +1,7 @@
 <div class="test" id="{{id}}">
     <button class="test__name test--{{type}} u-full-width {{flat}}" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">{{name}}</span>
-        <span class="u-pull-right">{{time}}</span>
+        <span class="u-pull-right">TIME: {{time}}</span>
     </button>
     {{{rendered.testMessages}}}
 </div>
